# x69Terminal

./: .gitignore  CMakeLists.txt
executable/: CMakeLists.txt  other.cpp  x69Terminal.cpp
x69Terminal/: CMakeLists.txt
x69Terminal/include/: x69Terminal.h
x69Terminal/source/: CMakeLists.txt  x69Terminal.cpp
x69Terminal/source/Apps/: CMakeLists.txt
x69Terminal/source/Apps/Emulator/: CMakeLists.txt  Emulator.cpp  Emulator.h
x69Terminal/source/Host/: CMakeLists.txt  Host.cpp  Host.h
x69Terminal/source/IO/: CMakeLists.txt  IO.cpp  IO.h  IOBuff.cpp  IOBuff.h
x69Terminal/source/Process/: CMakeLists.txt  Process.cpp  Process.h
x69Terminal/source/Shell/: CMakeLists.txt  Shell.cpp  Shell.h  ShellApp.cpp  ShellApp.h
x69Terminal/source/Shell/CLI/: CLI.cpp  CLI.h  CMakeLists.txt  Command.cpp  Command.h
x69Terminal/source/Terminal/: CMakeLists.txt  Draw.cpp  Draw.h  Region.h
x69Terminal/source/Utility/: CMakeLists.txt  CommandParse.h
x69Terminal/source/Utility/JCLib/jclib/: parse.h
